move towards ES6 module, refactoring for standarization

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <link rel="stylesheet" href="style.css">
 </head>
 
-<body onload="main()">
+<body>
   <button class="toggle-button" onclick="toggleOverlay()">Toggle Controls</button>
   <a href="https://github.com/ashwanirathee/VoxelMiner" target="_blank" class="github-button">View on GitHub</a>
 
@@ -85,25 +85,25 @@
   </div>
 
 
-  <script src="./lib/webgl-utils.js"></script>
-  <script src="./lib/webgl-debug.js"></script>
+  <!-- <script src="./lib/webgl-utils.js"></script> -->
+  <!-- <script src="./lib/webgl-debug.js"></script> -->
   <script src="./lib/cuon-matrix-cse160.js"></script>
   <script src="./lib/cuon-utils.js"></script>
-  <script src="./lib/renderer.js"></script>
-  <script src="./lib/global.js"></script>
+  <!-- <script src="./lib/renderer.js"></script> -->
+  <!-- <script src="./lib/global.js"></script> -->
   <script src="./lib/shaders.js"></script>
-  <script src="./lib/custom-utils.js"></script>
+  <!-- <script src="./lib/custom-utils.js"></script> -->
   <script src="./lib/scene.js"></script>
-  <script src="./lib/point.js"></script>
+  <!-- <script src="./lib/point.js"></script>
   <script src="./lib/triangle.js"></script>
-  <script src="./lib/circle.js"></script>
-  <script src="./lib/cube.js"></script>
-  <script src="./lib/sphere.js"></script>
-  <script src="./lib/dinosaur.js"></script>
-  <script src="./lib/cylinder.js"></script>
+  <script src="./lib/circle.js"></script> -->
+  <!-- <script src="./lib/cube.js"></script> -->
+  <!-- <script src="./lib/sphere.js"></script> -->
+  <!-- <script src="./lib/dinosaur.js"></script>
+  <script src="./lib/cylinder.js"></script> -->
   <script src="./lib/camera.js"></script>
   <script src="./lib/game.js"></script>
-  <script src="script.js"></script>
+  <script type="module" src="script.js"></script>
 </body>
 
 </html>
