--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 
 <body>
-  <button class="toggle-button" onclick="toggleOverlay()">Toggle Controls</button>
+  <button class="toggle-button">Toggle Controls</button>
   <a href="https://github.com/ashwanirathee/VoxelMiner" target="_blank" class="github-button">View on GitHub</a>
 
   <canvas id="webgl_canvas">
@@ -91,9 +91,9 @@
   <script src="./lib/cuon-utils.js"></script>
   <!-- <script src="./lib/renderer.js"></script> -->
   <!-- <script src="./lib/global.js"></script> -->
-  <script src="./lib/shaders.js"></script>
+  <!-- <script src="./lib/shaders.js"></script> -->
   <!-- <script src="./lib/custom-utils.js"></script> -->
-  <script src="./lib/scene.js"></script>
+  <!-- <script src="./lib/scene.js"></script> -->
   <!-- <script src="./lib/point.js"></script>
   <script src="./lib/triangle.js"></script>
   <script src="./lib/circle.js"></script> -->
@@ -101,8 +101,8 @@
   <!-- <script src="./lib/sphere.js"></script> -->
   <!-- <script src="./lib/dinosaur.js"></script>
   <script src="./lib/cylinder.js"></script> -->
-  <script src="./lib/camera.js"></script>
-  <script src="./lib/game.js"></script>
+  <!-- <script src="./lib/camera.js"></script> -->
+  <!-- <script src="./lib/game.js"></script> -->
   <script type="module" src="script.js"></script>
 </body>
 
