--- a/index.html
+++ b/index.html
@@ -10,6 +10,11 @@
 <body>
   <button class="toggle-button">Toggle Controls</button>
   <a href="https://github.com/ashwanirathee/VoxelMiner" target="_blank" class="github-button">View on GitHub</a>
+  
+  <div id="crosshair">
+    <div class="vertical"></div>
+    <div class="horizontal"></div>
+  </div>
 
   <canvas id="webgl_canvas">
     Please use a browser that supports "canvas"
@@ -70,17 +75,30 @@
       <p>
         <label for="cameraFOVc">Camera FOV</label>
         <input type="range" min="15" max="135" step="15" value="45" id="cameraFOVc">
+        <span id="cameraFOVcValue">45</span>
       </p>
       <p>
         <label for="cameraNEARc">Camera Near</label>
         <input type="range" min="0.001" max="10.001" step="1" value="0.001" id="cameraNEARc">
+        <span id="cameraNEARcValue">0.001</span>
       </p>
       <p>
         <label for="cameraFARc">Camera Far</label>
         <input type="range" min="2" max="200" step="10" value="100" id="cameraFARc">
+        <span id="cameraFARcValue">100</span>
+      </p>
+      <p>
+        <label for="cameraSpeedc">Camera Speed</label>
+        <input type="range" min="0.1" max="2" step="0.1" value="1" id="cameraSpeedc">
+        <span id="cameraSpeedcValue">1</span>
+      </p>
+      <p>
+        <label for="cameraAlphac">Camera Alpha</label>
+        <input type="range" min="0.1" max="5" step="0.1" value="2" id="cameraAlphac">
+        <span id="cameraAlphacValue">2</span>
       </p>
     </fieldset>
-
+    
     <p id="perf">perfstats:</p>
   </div>
 
