--- a/example/basic/index.html
+++ b/example/basic/index.html
@@ -1,90 +1,23 @@
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+    <meta charset="utf-8" />
+    <title>💎 VoxelMiner</title>
+    <link rel="stylesheet" href="style.css" />
+  </head>
 
-<head>
-  <meta charset="utf-8" />
-  <title>💎 VoxelMiner</title>
-  <link rel="stylesheet" href="style.css">
-</head>
+  <body>
+    <a
+      href="https://github.com/ashwanirathee/VoxelMiner"
+      target="_blank"
+      class="github-button"
+      >View on GitHub</a
+    >
 
-<body>
-  <button class="toggle-button">Toggle Controls</button>
-  <a href="https://github.com/ashwanirathee/VoxelMiner" target="_blank" class="github-button">View on GitHub</a>
-  
-  <div id="crosshair">
-    <div class="vertical"></div>
-    <div class="horizontal"></div>
-  </div>
+    <canvas id="webgl_canvas">
+      Please use a browser that supports "canvas"
+    </canvas>
 
-  <canvas id="webgl_canvas">
-    Please use a browser that supports "canvas"
-  </canvas>
-
-  <div class="overlay">
-    <fieldset>
-      <legend>Performance Metrics</legend>
-      <p>
-        <label for="frameRateValue">Frame Rate</label>
-        <span id="frameRateValue">45</span>
-      </p>
-      <p>
-        <label for="frameTimeValue">Frame Time(ms)</label>
-        <span id="frameTimeValue">45</span>
-      </p>
-      <p>
-        <label for="drawCallsValue">Draw Calls</label>
-        <span id="drawCallsValue">45</span>
-      </p>
-    </fieldset>
-    
-    <fieldset>
-      <legend>Display Options</legend>
-      <p>
-        <label for="normalController">Normals:</label>
-        <button id="normalController">Turn On</button>
-      </p>
-    </fieldset>
-
-    <fieldset>
-      <legend>Lights</legend>
-      <p>
-        <label for="lightAnimationController">Point Light Animation:</label>
-        <button id="lightAnimationController">Turn Off</button>
-      </p>
-    </fieldset>
-
-    <fieldset>
-      <legend>Camera</legend>
-      <p>
-        <label for="cameraFOVc">Camera FOV</label>
-        <input type="range" min="15" max="135" step="15" value="45" id="cameraFOVc">
-        <span id="cameraFOVcValue">45</span>
-      </p>
-      <p>
-        <label for="cameraNEARc">Camera Near</label>
-        <input type="range" min="0.001" max="10.001" step="1" value="0.001" id="cameraNEARc">
-        <span id="cameraNEARcValue">0.001</span>
-      </p>
-      <p>
-        <label for="cameraFARc">Camera Far</label>
-        <input type="range" min="2" max="200" step="10" value="100" id="cameraFARc">
-        <span id="cameraFARcValue">100</span>
-      </p>
-      <p>
-        <label for="cameraSpeedc">Camera Speed</label>
-        <input type="range" min="0.1" max="2" step="0.1" value="1" id="cameraSpeedc">
-        <span id="cameraSpeedcValue">1</span>
-      </p>
-      <p>
-        <label for="cameraAlphac">Camera Alpha</label>
-        <input type="range" min="0.1" max="5" step="0.1" value="2" id="cameraAlphac">
-        <span id="cameraAlphacValue">2</span>
-      </p>
-    </fieldset>
-  
-  </div>
-
-  <script type="module" src="script.js"></script>
-</body>
-
+    <script type="module" src="script.js"></script>
+  </body>
 </html>
